aws-ec2/terraform/security-groups/kibana-sg.tf
#
# Kibana Security Groups
#
# https://www.terraform.io/docs/providers/aws/r/security_group.html
resource "aws_security_group" "sg_tcp_to_kibana" {
  name        = "sg_tcp_to_kibana"
  description = "Allow TCP to Kibana host from internal IP ranges"

  # Kibana
  ingress {
    from_port   = 5601
    to_port     = 5601
    protocol    = "tcp"
    cidr_blocks = ["${var.vpc_cidr}"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  vpc_id = "${var.vpc_id}"

  tags {
    Name = "sg_tcp_to_kibana"
  }
}

output "sg_tcp_to_kibana-id" {
  value = "${aws_security_group.sg_tcp_to_kibana.id}"
}
